fix: fixes hero alignment

--- a/styles/Sections/HeroBanner.scss
+++ b/styles/Sections/HeroBanner.scss
@@ -81,6 +81,10 @@
             align-items: center;
         }
 
+        &--vertical-right {
+            align-items: flex-end;
+        }
+
         &--vertical-bottom {
             align-items: flex-end;
             padding: 0 0 70px;
